# daisy-rust-playground

./: .gitignore  Cargo.toml  README.md  b.sh  build.sh  burn.sh
.cargo/: config
src/: _main.rs  main.rs  num.rs
