[package]
name = "daisy-sigout-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32h7xx-hal = { version = "0.11.0", features = ["stm32h750v","rt","rm0433"] }
cortex-m-rt = "0.7.1"
num_enum = { version = "0.5.1", default-features = false }
cortex-m = "0.7.6"
libm = "0.2.5"

# cortex-m-rtic = "1.1"
log = "0.4.11"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
cfg-if = "1.0.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
cortex-m-log = { version = "~0.7.0", features = ["itm", "semihosting", "log-integration"] }
cortex-m-semihosting = "0.3.5"
panic-itm = { version = "~0.4.1" }
panic-semihosting = "0.6"

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
incremental = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size in flash
lto = true # better optimizations
opt-level = "s" # optimize for binary size
